Staging - Fix Spacing in Landing Page (#236)
* report modal

* Chel lawyers

* Adjusted Padding bottom of images

* fix lint issue

* Added SVG, Header, Footer

* Added SVG, Content creator

* fix event day (#217)

* fix event day

* fix date and month display in event page


* fix app version

* fix app version (#225)

* fix date group in community events

* oplanBaklas, reportForm, accordion, subheader

* add checkboxes to reportForm

* permit related page

* add successMessage modal component

* css fix smaller screen

* required-terms and reuse sendContactUs api

* lint fix

* indent fix

* remove unuse codes and fix back button

* fix popup page back to history back or callback

* added email, require all checkbox, update accordion

* integrate to API

* remove image blob inside json

* rename issue page to LawyersForChel

* adjust size

--- a/src/components/grid/LawyersForChel/style.scss
+++ b/src/components/grid/LawyersForChel/style.scss
@@ -27,7 +27,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		margin-top: 150px;
+		margin-top: 60px;
 		div {
 			width: 230px;
 			padding-bottom: 130px;
